@@ -87,6 +87,7 @@ public class Config extends StdCommand
 					}
 					sorted.add("LINEWRAP");
 					sorted.add("PAGEBREAK");
+					sorted.add("AUTOTELLNOTIFY");
 					Collections.sort(sorted);
 					final Object rawHelp=CMLib.help().getHelpFile().get("CONFIG_HELP_OPTIONS");
 					if((!(rawHelp instanceof String))||(((String)rawHelp).length()==0))
@@ -287,6 +288,25 @@ public class Config extends StdCommand
 					postStr=L("Configuration option change: PAGEBREAK");
 				}
 				else
+				if((name.equalsIgnoreCase("AUTOTELLNOTIFY"))
+				&&(mob.playerStats()!=null)
+				&&(mob.playerStats().getAccount()!=null))
+				{
+					final String parm=(commands.size()>2)?CMParms.combine(commands,2):"";
+					final PlayerAccount acct = mob.playerStats().getAccount();
+					if((!acct.isSet(PlayerAccount.AccountFlag.AUTOTELLNOTIFY) && (parm.length()==0))||(parm.equalsIgnoreCase("ON")))
+					{
+						acct.setFlag(PlayerAccount.AccountFlag.AUTOTELLNOTIFY, true);
+						postStr=L("Configuration flag toggled: AUTOTELLNOTIFY");
+					}
+					else
+					if((acct.isSet(PlayerAccount.AccountFlag.AUTOTELLNOTIFY) && (parm.length()==0))||(parm.equalsIgnoreCase("OFF")))
+					{
+						acct.setFlag(PlayerAccount.AccountFlag.AUTOTELLNOTIFY, false);
+						postStr=L("Configuration flag toggled: AUTOTELLNOTIFY");
+					}
+				}
+				else
 					postStr=L("Unknown configuration flag '@x1'.",name);
 			}
 			else
@@ -480,6 +500,24 @@ public class Config extends StdCommand
 			else
 				msg.append(CMStrings.padRight(m.toString(), 40));
 		}
+		if(CMProps.isUsingAccountSystem()
+		&&(mob.playerStats()!=null)
+		&&(mob.playerStats().getAccount()!=null))
+		{
+			final StringBuilder m=new StringBuilder("");
+			m.append("^W"+CMStrings.padRight("AUTOTELLNOTIFY",maxAttribLen)+"^N: ");
+			final boolean set=mob.playerStats().getAccount().isSet(PlayerAccount.AccountFlag.AUTOTELLNOTIFY);
+			m.append(set?L("^gON"):L("^rOFF"));
+			if(++col==2)
+			{
+				msg.append(m.toString());
+				msg.append("\n\r");
+				col=0;
+			}
+			else
+				msg.append(CMStrings.padRight(m.toString(), 40));
+		}
+
 		msg.append("^N");
 		msg.append(L("\n\rUse CONFIG HELP (X) for more information.\n\r"));
 		if(!quieter)
