@@ -72,6 +72,7 @@ AUTOMELEE=Advance at combatants too far away for your wielded weapon.\n\r\
 AUTONOTIFY=See when members of your FRIENDS list log on.\n\r\
 AUTORUN=Always try to run when moving from room to room.\n\r\
 AUTOWEATHER=See notifications about the weather.\n\r\
+AUTOTELLNOTIFY=See notifications when your other chars get tells.\n\r\
 BRIEF=Don't see room descriptions when moving from room to room.\n\r\
 COMPRESSED=See a shorter list of items and mobs in rooms.\n\r\
 LINEWRAP=The number of characters per line before wrapping.\n\r\
